# cherrybin

./: .dockerignore  Dockerfile  README.md  app.py  build.sh  compose.yml  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: docker-image.yml
assets/: package-lock.json  package.json  webpack.config.js
assets/src/: crypto.coffee  index.coffee  pasteActions.coffee  pasteFormHandler.coffee  styles.css  styles.scss
cherrybin/: .env.example  __init__.py  auth.py  crypto.py  paste.py
cherrybin/templates/: base.html  base.jinja  home.jinja
cherrybin/templates/auth/: profile.jinja  profile_form.jinja  signup.jinja
cherrybin/templates/pastes/: my.jinja  new.jinja  view.jinja
cherrybin/templates/shared/: header.jinja
instapasta/: .env  .env.example  __init__.py  auth.py  crypto.py  pasta.py  pyrebase.py
instapasta/templates/: base.html  home.jinja
instapasta/templates/auth/: form.jinja  login.jinja  signup.jinja
instapasta/templates/pastas/: my.jinja  new.jinja  view.jinja
instapasta/templates/shared/: header.jinja  mark.jinja
