[project]
name = "cherrybin"
version = "0.1.0"
description = "Simple pastebin clone"
dependencies = [
    "flask",
    "pyrebase4",
    "firebase-admin",
    "python-dotenv",
    "setuptools",
    "djlint",
    "sqids",
    "cryptography"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
