[project]
name = "instapasta"
version = "0.1.0"

[dependencies]
python = "^3.12"
pyrebase4 = "^4.8.0"
flask = "^3.0.3"
firebase-admin = "^6.5.0"
python-dotenv = "^1.0.1"
sqids = "^0.4.1"
cryptography = "^42.0.6"
waitress="^3.0.0"
dotenv="^0.0.5"

[project.optional-dependencies]
dev = [
    "setuptools>=69.5.1",
    "djlint>=1.34.1"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[tool.setuptools]
py-modules = []